--- a/AtelierManager/AtelierManager.csproj
+++ b/AtelierManager/AtelierManager.csproj
@@ -50,6 +50,7 @@
     <Compile Include="EBM0.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructStream.cs" />
+    <Compile Include="XML.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
